src/compose/tests/expected/missing_import.txt
error: required import 'missing' not found
  ┌─ tests/error_test/include.wgsl:7:1
  │
7 │ #import missing
  │ ^
  │
  = missing import 'missing'

